# xianzu-wiki

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  relations.py  schemas.py
backend/app/routers/: auth.py  characters.py  io.py  relationships.py
backend/tests/: conftest.py  test_auth.py  test_backup.py  test_characters.py  test_db_pragma.py  test_io.py  test_models.py  test_relations.py  test_relationships.py
deploy/: nginx.conf  xjxz.service
docs/: deploy.md
docs/superpowers/plans/: 2026-06-29-xjxz-backend.md  2026-06-29-xjxz-frontend.md
docs/superpowers/specs/: 2026-06-29-xjxz-character-wiki-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/public/: data.json
frontend/src/: App.test.tsx  App.tsx  env.ts  main.tsx  types.ts
frontend/src/api/: auth.test.ts  auth.ts  characters.test.ts  characters.ts  client.test.ts  client.ts  integration.test.ts  io.test.ts  io.ts  relationships.test.ts  relationships.ts  staticData.test.ts  staticData.ts
frontend/src/components/: CharacterCard.test.tsx  CharacterCard.tsx  CharacterForm.test.tsx  CharacterForm.tsx  FamilyTree.test.tsx  FamilyTree.tsx  Header.test.tsx  Header.tsx  ImportExport.test.tsx  ImportExport.tsx  Markdown.test.tsx  Markdown.tsx  RelationshipPanel.test.tsx  RelationshipPanel.tsx
frontend/src/lib/: familyTreeLayout.test.ts  familyTreeLayout.ts  safeUrl.test.ts  safeUrl.ts
scripts/: backup.sh
(+11 files in other folders)
