[project]
name = "xjxz-backend"
version = "0.1.0"
description = "玄鉴仙族 character wiki backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlmodel>=0.0.16",
    "uvicorn[standard]>=0.29",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.0,<4.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::starlette.exceptions.StarletteDeprecationWarning"]
